# OS_Project

./: CMakeLists.txt  csv.  csv.h  input_120.csv  main  main.cpp  mainscheduling.cpp  mainscheduling_algorithms  mainwindow.h  mainwindow.ui  scheduling_algorithms.cpp  scheduling_algorithms.h  testFCFS  test_large.csv  test_midium.  test_small.csv
